# routes/api.php
@@ -3,7 +3,7 @@
 use App\Http\Controllers\BookingController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-
+use App\Http\Controllers\RoomController;
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -14,11 +14,10 @@ use Illuminate\Support\Facades\Route;
 | be assigned to the "api" middleware group. Make something great!
 |
 */
-
 // Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 //     return $request->user();
 // });
-
 Route::apiResource('bookings', BookingController::class);
 Route::patch('bookings/{id}/restore', [BookingController::class, 'restore']);
+Route::resource('rooms', RoomController::class);
 
